k8s/services/network/clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP

# Internal Communication: Enables Pods within the cluster to communicate with each other.
# Service Discovery: Provides a DNS name (<service-name>.<namespace>.svc.cluster.local) that other Pods can use to locate it.
# Simplified Networking: Eliminates the need for Pods to track each other’s IPs.
